fix: make buttons not wrap on the icon

--- a/src/containers/HomeView/Work/ProjectCard/ProjectCard.module.scss
+++ b/src/containers/HomeView/Work/ProjectCard/ProjectCard.module.scss
@@ -62,5 +62,6 @@
   .ProjectDetails,
   .ProjectDetailsLeft {
     align-items: center;
+    padding: var(--s3);
   }
 }
