--- a/src/styles/global.scss
+++ b/src/styles/global.scss
@@ -173,6 +173,10 @@ button,
     color: var(--textColDisabled);
     cursor: default;
   }
+
+  span:not([class]) {
+    display: inline-block;
+  }
 }
 
 button.secondary,
